# airflow-dags

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  airflow_settings.yaml  conftest.py  dagzinha.py  delta_lag_dag.py  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  football_teams2.py  mypy.ini  novasexperiencias.py  novo-teste.py  novoteste.py  pyproject.toml  requirements.txt  setup.py  sparkoperator_demo.py  sparksubmit_dag.py  teste.py  teste2.py
.astro/: config.yaml  test_dag_integrity_default.py
.github/workflows/: ci.yaml
dags/: delivery_data_from_nb_carga_contaminantes_to_snowflake.py  delivery_data_from_sap_hana_to_kafka.py  feature_eng copy.py  feature_eng.py  great_expectations_validation.py  ingestion_sap_hana.py  ingestion_sap_hana_to_minio.py  ingestion_sap_hana_to_minio.yaml  mlflow_tutorial_dag.py  monitor-features.py  monitoring_feature.py  pipeline_delta_lake_deep_dive_complete.py  predict.py  retrain.py  s3_etl_business_dag_part_1.py  s3_etl_business_dag_part_2.py  temp_ingestion.py  temp_ingestion_copy.py  test.py  train.py
dags/spark_jobs/: delivery_data_from_nb_carga_contaminantes_to_snowflake.yaml  delivery_data_from_sap_hana_to_kafka.yaml  delivery_data_from_sap_hana_to_kafka_1.yaml
dags/src/: SAPHANAOperator.py  avro_generator.py  delivery_data_from_sap_hana_to_kafka.py  delivery_data_from_sap_hana_to_kafka_py_spark.py  (+1 more)
data/: coisa.ipynb  test-Copy1.ipynb  test.ipynb
spark_jobs/: delta_lag.py  sparksubmit_basic.py  teams.py  wordcount.txt
tests/: test_airflow_basic.py
(+4 files in other folders)
