[tool.poetry]
name = "airflow-dags"
version = "0.1.0"
description = "Aifrlow dags repository"
authors = ["GersonRS <grs@cesar.org.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = {version = "^2.7.3", python = ">=3.8,<3.12"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
